--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "prisma": "^5.21.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/cookie": "^0.5.1"
   }
 }
